--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "SecurityKey": "$1$6na8oqt/$Ar3v/a5hYQoBneimaxBer1",
   "ConnectionString": {
     "DefaultConnection": "server=127.0.0.1;uid=root;pwd=1234567;database=easyhotel"
   },
