adição de paginacao nas reservas

--- a/easy-hotel-backend.csproj
+++ b/easy-hotel-backend.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
+    <PackageReference Include="X.PagedList" Version="7.6.0" />
+    <PackageReference Include="X.PagedList.Mvc" Version="7.6.0" />
   </ItemGroup>
 
   <ItemGroup>
